--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<figcaption><em>Eiichiro Oda, criador de One Piece.</em></figcaption>
 		</picture>
 	
-	    <p id="autor">Quer saber mais sobre <strong>Eiichiro Oda</strong>? Confira na nossa seção do <a href="autor.html">Autor</a>.</p>
+	    <p id="autor">Quer saber mais sobre <b>Eiichiro Oda</b>? Confira na nossa seção do <a href="autor.html">Autor</a>.</p>
     </main>
 
 	<a href="#" class="voltar-topo" ><img src="imagens/seta-para-cima.png" alt="Voltar ao Topo"></a>
