atualizei imagens index

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 	    <h2>LOGO DE ONE PIECE</h2>
 
 	    <picture class="imagens">
-			<source media="(max-width: 650px)" srcset="imagens/home/logo-pq.png">
+			<source media="(max-width: 500px)" srcset="imagens/home/logo-pq.png">
+			<source media="(max-width: 800px)" srcset="imagens/home/logo-m.png">
 			<img src="imagens/home/logo.png" alt="Logo de One Piece">
 			<figcaption><em>Logo de One Piece.</em></figcaption>
 		</picture>
